Update availablity
